--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="card">
       <h1>Hello, I'm Gwenola 😎</h1>
-      <img src="/images/gwenola.jpeg" alt="gwenola" width="200px">
+      <img src="images/gwenola.jpeg" alt="gwenola" width="200px">
       <p>I worked in the payment industry at ProcessOut and I'm now learning how to code!</p>
       <a href="https://www.processout.com/" target="_blank" id="cta">ProcessOut</a>
     </div>
